--- a/views/main.jade
+++ b/views/main.jade
@@ -1,1 +1,12 @@
 extends layout
+
+block content
+header
+    h1 NodeBM
+    nav
+      a(href="#") Change password
+    p Logged as #{username}
+
+block content
+
+footer
