--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,11 @@ doctype html
 html
   head
     title= title
+    link(rel='stylesheet', href='/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
-    block content
+    .container
+      block content
+
+    script(src='/js/jquery.min.js')
+    script(src='/js/bootstrap.min.js')
